--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,24 +3,53 @@ body {
     font-family: 'MS Sans Serif', Arial, sans-serif;
     background-color: #008080;
     margin: 0;
-    padding: 20px;
+    padding: 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+    flex-direction: column;
+    height: 100vh;
+    overflow: hidden;
 }
 
-.container {
-    max-width: 600px;
-    width: 100%;
+.desktop {
+    flex-grow: 1;
+    position: relative;
+    padding: 20px;
+}
+
+.desktop-icons {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.icon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    color: white;
+    font-size: 12px;
+}
+
+.icon img {
+    width: 32px;
+    height: 32px;
+    margin-bottom: 5px;
 }
 
 .window {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: #c0c0c0;
     border: 2px solid #dfdfdf;
     border-bottom-color: #808080;
     border-right-color: #808080;
     box-shadow: inset 1px 1px #dfdfdf, 1px 0 #000, 0 1px #000, 1px 1px #000;
+    max-width: 400px;
+    width: 100%;
 }
 
 .title-bar {
@@ -119,13 +148,52 @@ body {
     border-right-color: #dfdfdf;
 }
 
+.taskbar {
+    height: 28px;
+    background-color: #c0c0c0;
+    border-top: 2px solid #dfdfdf;
+    display: flex;
+    align-items: center;
+    padding: 0 2px;
+    box-shadow: inset 0 1px #fff;
+}
+
+.start-button {
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    padding: 2px 5px;
+    margin-right: 10px;
+    background-color: #c0c0c0;
+    border: 2px solid #dfdfdf;
+    border-bottom-color: #808080;
+    border-right-color: #808080;
+    box-shadow: inset 1px 1px #fff, inset -1px -1px #0a0a0a;
+}
+
+.start-button img {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+}
+
+.time {
+    margin-left: auto;
+    font-size: 12px;
+    padding: 2px 5px;
+    background-color: #c0c0c0;
+    border: 2px solid #808080;
+    border-bottom-color: #dfdfdf;
+    border-right-color: #dfdfdf;
+}
+
 /* Responsive design */
 @media (max-width: 600px) {
-    body {
+    .desktop {
         padding: 10px;
     }
     
-    .container {
-        width: 100%;
+    .window {
+        width: 90%;
     }
 }
