Agent step completed: Build the initial prototype

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,6 +75,10 @@ body {
     margin-right: 5px;
 }
 
+.title-bar-controls {
+    display: flex;
+}
+
 .title-bar-controls button {
     width: 16px;
     height: 14px;
