--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,7 @@
             <img src="{{ url_for('static', filename='images/start_button.png') }}" alt="Start">
             Start
         </button>
+        <div class="taskbar-icons"></div>
         <div class="time">12:00 PM</div>
     </div>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
