Agent query: Are the desktop icons (My Computer and My Documents) clickable? When clicked, do they show an alert message? Also, do the icons have a hover effect?

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,11 +16,11 @@
     </div>
     <div class="desktop">
         <div class="desktop-icons">
-            <div class="icon">
+            <div class="icon" data-action="open-computer">
                 <img src="{{ url_for('static', filename='images/my_computer.png') }}" alt="My Computer">
                 <span>My Computer</span>
             </div>
-            <div class="icon">
+            <div class="icon" data-action="open-documents">
                 <img src="{{ url_for('static', filename='images/my_documents.png') }}" alt="My Documents">
                 <span>My Documents</span>
             </div>
