Agent query: Please access the admin page at /admin and verify the following: 1. Is the terminal UI visible? 2. Can you type in the terminal input field? 3. Does the "help" command work when you type it and press Enter? 4. Are there any error messages in the browser console? Please provide detailed feedback on each point.

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -23,6 +23,7 @@
             box-sizing: border-box;
             display: flex;
             flex-direction: column;
+            z-index: 1000;
         }
         .terminal-output {
             flex-grow: 1;
@@ -49,7 +50,7 @@
         }
     </style>
 </head>
-<body>
+<body onload="console.log('Admin page fully loaded');">
     <div class="terminal" id="terminal">
         <div class="terminal-output" id="terminalOutput"></div>
         <div class="terminal-input-container">
