Agent query: Can you access the admin terminal at /admin? Is there a password prompt now? Can you use the terminal only after entering the correct password?

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -83,5 +83,8 @@
         </div>
     </div>
     <script src="{{ url_for('static', filename='js/terminal.js') }}"></script>
+    <script>
+        const requirePassword = {{ require_password|tojson }};
+    </script>
 </body>
 </html>
